log
Fri 23 Sep 2022 03:56:27 PM UTC: 
 treemap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:18: error: expected expression before ‘TreeMap’
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |                  ^~~~~~~
treemap.c:43:12: error: redefinition of ‘map’
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c:41:12: note: previous definition of ‘map’ was here
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |            ^~~
treemap.c:43:12: error: unused variable ‘map’ [-Werror=unused-variable]
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
b5b57e6
Fri 23 Sep 2022 03:56:32 PM UTC: 
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:18: error: expected expression before ‘TreeMap’
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |                  ^~~~~~~
treemap.c:43:12: error: redefinition of ‘map’
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c:41:12: note: previous definition of ‘map’ was here
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |            ^~~
treemap.c:43:12: error: unused variable ‘map’ [-Werror=unused-variable]
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
056f831
Fri 23 Sep 2022 04:17:21 PM UTC: 
 treemap.c | 19 ++++++++++++++-----
 1 file changed, 14 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:18: error: expected expression before ‘TreeMap’
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |                  ^~~~~~~
treemap.c:43:12: error: redefinition of ‘map’
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c:41:12: note: previous definition of ‘map’ was here
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |            ^~~
treemap.c:43:12: error: unused variable ‘map’ [-Werror=unused-variable]
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:12: error: expected identifier before ‘=’ token
   53 |     tree-> = createTreeNode(key,value);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
395d931
